# sensor-drift-pca

./: .gitignore  .pre-commit-config.yaml  README.md  REPORT.md  Understanding the Gas Sensor Array - From Chemical Fingerprints to Drift Challenges.txt  _quarto.yml  bootstrap_env.sh  pyproject.toml  references.bib  requirements.txt
configs/: exp_baseline.yaml
data/raw/: earnings.csv  prices.csv
notebooks/: 01_data_exploration.ipynb  PCA-Drift-Investigations-Revised.ipynb  PCA-Drift-Investigations-Revised.tex  _quarto.yml  main.fdb_latexmk  main.ipynb  main.tex  main_backup.ipynb  test_viz.py
notebooks/config/: _quarto-latexauto.yml  _quarto.yml  styles.css
report/: latexmkrc  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
results/model_eval/: baseline_metrics.json
scripts/: clean_front_matter.py  convert_cards_to_md.py  init_project.py  move_title_to_metadata.py  refresh_snippets.py  remove_manual_toc.py  render_notebook.sh  run_train.sh  set_title_markdown.py  strip_inline_styles.py
src/sensor_drift/: __init__.py  data_preprocessing.py  download_data.py  drift_correction.py  load_data.py  model_training.py  pca_analysis.py  process_dat_to_csv.py  smoke_test.py  stability_metrics.py  synthetic_data.py
src/yourproj/: config.py  device.py  eval.py  features.py  ingest.py  labels.py  models.py  nbstyle.py  preprocess.py  smoke.py  train.py  trainer.py  utils.py
src/yourproj/data/: tabular.py
src/yourproj/models/: __init__.py  registry.py  sklearn_logreg.py  tf_mlp.py  torch_mlp.py
